force-app/main/default/objects/custom_create336__c/custom_create336__c.object-meta.xml
<CustomObject>
    <label>Custom created object336</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects336</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>