force-app/main/default/objects/custom_create336__c/fields/custom_create_336field548__c.field-meta.xml
<CustomField>
    <fullName>custom_create_336field548__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 336field548</label>
    <type>Checkbox</type>
</CustomField>